# descript-audio-codec

./: pyproject.toml  requirements.txt
conf/: emg.yml
