[tool.poetry]
name = "dac"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.2.2"
argbind = ">=0.3.7"
descript-audiotools = ">=0.7.2"
einops = "^0.8.0"
numpy = "^1.26"
torchaudio = "2.2.2"
tqdm = "^4.66.4"
tensorboard = "^2.17.0"
numba = ">=0.5.7"
jupyterlab = "^4.2.2"
vector-quantize-pytorch = "^1.14.30"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
